--- a/app/config.rb.example
+++ b/app/config.rb.example
@@ -1,4 +1,7 @@
 module Config
   PARSE_APP_ID = "..."
   PARSE_CLIENT_KEY = "..."
+
+  TWITTER_CONSUMER_KEY = "..."
+  TWITTER_CONSUMER_SECRET = "..."
 end
